--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: sans-serif;
     /* font-family: cursive; */
 }
+
+body{
+    margin: 0px;
+}
 *{
     box-sizing: border-box;
 }
@@ -126,3 +130,54 @@ footer h2{
         display: flex;
         justify-content: space-around;
     }
+
+    footer{
+        /* position: relative; */
+    }
+    /* Chat */
+    .chat_window{
+        /* outline:5px solid red; */
+        position: static;
+        /* position: relative;
+        /* left:50px; */
+        /* top:-50px;
+        right:-50px;
+        bottom:10px;  */
+        position: absolute;
+        bottom:10px;
+        right:35px;
+        width: 200px;
+        position: fixed;
+        background-color: white;
+        box-shadow: 0px 0px 10px grey;
+        button.close_btn{
+           text-align: center;
+            margin: 10px;
+            display: block;
+            position: relative;
+            right:calc(-200px + 46px);
+        }
+
+        form{
+            display: flex;
+            flex-direction: column;
+            gap:20px;
+            margin: 20px;
+            input,textarea,button{
+                font-size: 1rem;
+                padding:3px 10px;
+            }
+            textarea{
+                resize: vertical;
+            }
+        }
+
+
+    }
+    
+
+    nav{
+        position: sticky;
+        top:0px;
+    }
+
