--- a/style.css
+++ b/style.css
@@ -181,3 +181,69 @@ footer h2{
         top:0px;
     }
 
+
+    nav a:hover{
+        color: red;
+    }
+
+    nav a:active{
+         font-size: 1.3rem;
+    }
+
+    img:hover{
+        border:1px solid red;
+    }
+
+    input:focus-visible, textarea:focus{
+        background-color: cadetblue;
+    }
+
+
+    .chat_window{
+            bottom:-250px;
+            transition: 0.3s cubic-bezier(0,.09,.16,1.37);
+    }
+    .chat_window:hover{
+              bottom:0px;
+              transition: .5s cubic-bezier(0,.09,.16,1.37);
+    }
+
+
+
+    /* Transformācijas */
+    img{
+            filter: grayscale(1);
+    }
+
+        img:hover{
+            /* transform: rotate(-720deg);
+            transform: rotate(-720deg) scale(2);
+            transform: translate(0px,20px);
+            transform: skew(10deg,10deg);
+
+            filter: blur(10px);
+            /* filter: grayscale(0); */
+            /* filter: opacity(0.5);
+            filter: saturate(2);
+            filter: blur(5px) opacity(.8);  */
+
+            /* transition: .5s cubic-bezier(0,.09,.16,1.37); */
+            animation: animacija1 .5s infinite ease-out;
+
+        }
+
+        @keyframes animacija1 {
+               0%{
+                    transform: scale(1) rotate(0deg);
+                    filter: opacity(0.2);
+               } 
+
+               50%{
+                    transform: scale(1.2) rotate(10deg);
+                    filter: opacity(1);
+               }
+               100%{
+                    transform: scale(1) rotate(0deg);
+                    filter: opacity(0.2);
+               }
+        }
